hphp/hack/test/typecheck/global_const18.php.exp
File "global_const18.php", line 3, characters 15-20:
Expected constant expression for initializer (Parsing[1002])
File "global_const18.php", line 3, characters 17-20:
Illegal constant value (Naming[2023])
